# RSeed

./: .gitignore  .gitmodules  Cargo.toml  Features.md  ReadMe.md  loc.sh
.cargo/: config  config.toml
.github/workflows/: rust.yml
crates/node_derive/: Cargo.toml
crates/node_derive/src/: fields.rs  lib.rs  node.rs  node2d.rs  node3d.rs
crates/rseed_app/: Cargo.toml
crates/rseed_app/src/: app.rs  builder.rs  config.rs  lib.rs
crates/rseed_asset/: Cargo.toml
crates/rseed_asset/src/: asset.rs  assetcache.rs  assetloader.rs  config.rs  lib.rs
crates/rseed_asset/src/config/: shaderconfig.rs
crates/rseed_core/: Cargo.toml
crates/rseed_core/src/: consts.rs  error.rs  lib.rs  log.rs  macros.rs  private.rs  time.rs  utils.rs
crates/rseed_core/src/utils/: bit.rs  time.rs  version.rs
crates/rseed_core_macros/: Cargo.toml
crates/rseed_core_macros/examples/: test.rs
crates/rseed_core_macros/src/: lib.rs  set_get.rs
crates/rseed_gl/: Cargo.toml
crates/rseed_gl/gl/: Cargo.toml  build.rs
crates/rseed_gl/gl/src/: lib.rs
crates/rseed_gl/src/: context.rs  lib.rs  shader.rs  varray.rs
crates/rseed_log/: Cargo.toml
crates/rseed_log/src/: color.rs  lib.rs  log.rs
crates/rseed_math/: Cargo.toml
crates/rseed_math/src/: quat.rs
crates/rseed_math/src/noise/: open_simplex.rs
crates/rseed_node/: Cargo.toml
crates/rseed_node/node_macros/: Cargo.toml
crates/rseed_node/node_macros/src/: lib.rs
crates/rseed_node/src/: lib.rs  node.rs
crates/rseed_node/src/2d/: node2d.rs
crates/rseed_node/src/3d/: node3d.rs
crates/rseed_renderapi/: Cargo.toml
crates/rseed_renderapi/src/: buffer.rs  context.rs  lib.rs  renderer.rs  texture.rs
crates/rseed_renderer/: Cargo.toml
crates/rseed_renderer/src/: lib.rs
crates/rseed_res/: Cargo.toml
crates/rseed_res/src/: lib.rs
crates/rseed_shaderlib/: Cargo.toml
crates/rseed_shaderlib/src/: lib.rs
crates/rseed_vk/: Cargo.toml
crates/rseed_vk/src/: context.rs  debug.rs  device.rs  lib.rs  library.rs  pipeline.rs  surface.rs  swapchain.rs
crates/rseed_vk/src/context/: debug.rs  device.rs  library.rs  pipeline.rs  surface.rs  swapchain.rs  window.rs
doc/: book.toml
examples/base_app/: Carg.toml  Cargo.toml  base_app.proj.toml  cargo.toml  main_scene.scn.toml
examples/base_app/assets/: rect.frag  rect.vert
examples/base_app/scenes/: example.scn.toml
examples/base_app/src/: main.rs
lib/rseed_core/: Cargo.toml
lib/rseed_core/src/: lib.rs  utils.rs
lib/rseed_log/: Cargo.toml
lib/rseed_log/src/: color.rs  lib.rs  log.rs
lib/rseed_vk/: Cargo.toml
lib/rseed_vk/src/: context.rs  debug.rs  device.rs  lib.rs  surface.rs  swapchain.rs
src/: app.rs  main.rs
src/core/: consts.rs  context.rs  mod.rs  utils.rs  window.rs
