[package]
name = "rseed_app"
version = "0.1.0"
authors = ["Adrien <adriendml99@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rseed_vk = {path = "../rseed_vk"}
rseed_log = {path = "../rseed_log"}
winit = "*"