[package]
name = "rseed_app"
version = "0.1.0"
authors = ["Adrien <adriendml99@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.27"
specs = "0.17"
rseed_renderer = {path = "../rseed_renderer"}
rseed_log = {path = "../rseed_log"}
rseed_core = {path = "../rseed_core"}
rseed_renderapi = {path = "../rseed_renderapi"}
rseed_asset = {path = "../rseed_asset"}
