[package]
name = "rseed_core"
version = "0.1.0"
authors = ["Adrien <adriendml99@protonmail.com>"]
edition = "2018"
readme = "Readme.md"
workspace = "../.."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.3.0"
derive_builder = "0.10.2"
serde = {version = "1.0.126", features = ["derive"]}
toml = "0.5.8"