[package]
name = "rseed_gl"
version = "0.1.0"
authors = ["adrien"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
rseed_res = {path = "../rseed_res"}
rseed_log = {path = "../rseed_log"}
rseed_core = {path = "../rseed_core"}