[package]
name = "rseed_gl"
version = "0.1.0"
authors = ["Adrien <adriendml99@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "gl" }
glutin = "*"
rseed_res = {path = "../rseed_res"}
rseed_log = {path = "../rseed_log"}
rseed_core = {path = "../rseed_core"}
