[package]
name = "rseed_vk"
version = "0.1.0"
authors = ["Adrien <adriendml99@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
rust-gpu = "0.1.0"
rseed_log = {path = "../rseed_log"}
rseed_core = {path = "../rseed_core"}
raw-window-handle = "0.3.3"
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.1"