[package]
name = "node_macros"
version = "0.1.0"
authors = ["AdrienDML <adriendml99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.72"

[lib]
proc-macro = true